Fix cover letter duplication.

--- a/templates/resume_template.html
+++ b/templates/resume_template.html
@@ -96,7 +96,7 @@
     <div class="header">
         <div class="name">{name}</div>
 		<div class="contact-info">
-		  <div class="contact-line">phone {phone} | email <a href="mailto:{email}">{email}</a></div>
+		  <div class="contact-line"> {phone} | <a href="mailto:{email}">{email}</a></div>
 		  <div class="contact-line">
 			    {linkedin_html} | {github_html}
 		  </div>
